did exclud all fictices users because did a mistake, do´nt add them now